archived_docs/versions/v2.9/modules/en/pages/cluster-deployment/infra-providers/azure/node-template-configuration.adoc
= Azure Node Template Configuration
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/azure.adoc 
:product-path: cluster-deployment/infra-providers/azure/node-template-configuration.adoc

For more information about Azure, refer to the official https://docs.microsoft.com/en-us/azure/?product=featured[Azure documentation.]

Account access information is stored as a cloud credential. Cloud credentials are stored as Kubernetes secrets. Multiple node templates can use the same cloud credential. You can use an existing cloud credential or create a new one.

* *Placement* sets the geographical region where your cluster is hosted and other location metadata.
* *Network* configures the networking used in your cluster.
* *Instance* customizes your VM configuration.
+

[NOTE]
====
If using a VNet in a different Resource Group than the VMs, the VNet name should be prefixed with the Resource Group name. For example, `<resource group>:<vnet>`.
====


If you use Docker, the https://docs.docker.com/engine/docker-overview/#the-docker-daemon[Docker daemon] configuration options include:

* *Labels:* For information on labels, refer to the https://docs.docker.com/config/labels-custom-metadata/[Docker object label documentation.].
* *Docker Engine Install URL:* Determines what Docker version will be installed on the instance.
+

[NOTE]
====
If you're provisioning Red Hat Enterprise Linux (RHEL) or CentOS nodes, leave the *Docker Install URL* field as the default value, or select *none*. This will bypass a check for Docker installation, as Docker is already installed on these node types.

If you set *Docker Install URL* to a value other than the default or *none*, you might see an error message such as the following: `Error creating machine: RHEL ssh command error: command: sudo -E yum install -y curl err: exit status 1 output: Updating Subscription Management repositories.`
====


* *Registry mirrors:* Docker Registry mirror to be used by the Docker daemon.
* *Other advanced options:* Refer to the https://docs.docker.com/engine/reference/commandline/dockerd/[Docker daemon option reference].
